[workspace]
resolver = "2"
members = [
    "core/allure",
    "core/ignored_tests_parser",
    "core/telegram",
    "scripts/allure_test_report_upload_to_influxdb",
    "scripts/ignored_tests_csv_collector",
    "scripts/ignored_tests_notify_telegram",
]

[workspace.dependencies]
futures = { version = "0.3.30" }
tokio = { version = "1.37.0", features = ["full"] }
lazy_static = { version = "1.4.0" }
regex = { version = "1.10.4" }
clap = { version = "4.5.4", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
walkdir = { version = "2.5.0" }
csv = { version = "1.3.0" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117" }
reqwest = { version = "0.12.4", features = ["json"] }
influxdb = { version = "0.7.2", features = ["derive"] }
thiserror = { version = "1.0.60" }
bytes = { version = "1.6.0" }
teloxide = { version = "0.12.2" }