[package]
name = "core_allure"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }