[package]
name = "core_ignored_tests_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }