[package]
name = "ignored_tests_csv_collector"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }