[package]
name = "ignored_tests_notify_telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
core_ignored_tests_parser = { path = "../../core/ignored_tests_parser" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }